Persist the todo items into SQLite using DBFlow

--- a/SimpleTodo/app/build.gradle
+++ b/SimpleTodo/app/build.gradle
@@ -18,6 +18,7 @@ android {
         }
     }
 }
+def dbflow_version = "4.0.3"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -27,5 +28,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'commons-io:commons-io:2.4'
+
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
     testCompile 'junit:junit:4.12'
 }
